fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -67,3 +67,7 @@
 #card-section {
   margin-left: 20px;
 }
+
+.status {
+  padding: 20px;
+}
